dotnet-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dotnet-app-deployment
spec:
  selector:
    matchLabels:
      app: dotnet-app
  template:
    metadata:
      labels:
        app: dotnet-app
    spec:
      containers:
      - name: employee-mvc-app
        image: nandhagopalkrishnan/employee-app:employeemvc-employee-app
        imagePullPolicy: Never
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 1234
---
apiVersion: v1
kind: Service
metadata:
  name: dotnet-app-service
spec:
  selector:
    app: dotnet-app
  type: NodePort
  ports:
  - port: 1234
    targetPort: 1234
    protocol: TCP
