mssql-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mssql-server
spec:
  # replicas: 2
  selector:
    matchLabels:
      app: mssql
  template:
    metadata:
      labels:
        app: mssql
    spec:
      containers:
      - name: mssql-server
        image: mcr.microsoft.com/mssql/server
        imagePullPolicy: Always
        resources:
          limits:
            memory: "4096Mi"
            cpu: "1000m"
        ports:
        - containerPort: 1433
        volumeMounts:
          - name: mssql-db-data
            mountPath: /var/opt/mssql/data
      
      volumes:
        - name: mssql-db-data
          persistentVolumeClaim: 
            claimName: mssql-pvc-depl
---
apiVersion: v1
kind: Service
metadata:
  name: mssql-app-service
spec:
  selector:
    app: mssql
  ports:
  - port: 1433
    targetPort: 1433
  type: NodePort
