dotnet-app-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dotnet-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  spec:
    rules:
      - host: simple.com
        http:
          paths:
            - path: /
              pathType: Prefix
              backend:
                service:
                  name: dotnet-app-service
                  port:
                    number: 1234
